--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -82,8 +82,8 @@
                     <div class="slide-item">
                         <img src="images/slider3.jpg" alt="Slider Saul"/>
                         <div class="item-caption">
-                            <h2>What is NRG?</h2>
-                            <a href="/site/es/gastronomia/losteria.html">Learn More</a>
+                            <h2>Save Energy</h2>
+                            <a href="main">Now!</a>
                         </div>
                     </div>
                 </div>
@@ -94,37 +94,41 @@
 <section class="feature-blocks">
     <div class="container">
         <div class="blocks-wrapper">
-            <h3>Featured Items</h3>
+            <h3>About</h3>
             <div class="row">
                 <div class="col-md-4 col-sm-12 col-xs-12">
                     <div class="feature-item">
                         <!--<a href="/estilosaul/2016/january/nuevas-cervezas-artesanales-en-saul-losteria.html">-->
                         <a href="/estilosaul/2016/january/nuevas-cervezas-artesanales-en-saul-losteria">
                             <img src="images/thunder.png" alt="Feature Image"/>
-                            <h4>Lorem ipsum dolor sit amet</h4>
+                            <h4>Purpose</h4>
                         </a>
-                        <p>Pellentesque habitant morbi tristique
-                            senectus et netus et malesuada fames ac turpis egestas.
-                            Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.
-                            Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.s</p>
+                        <p>
+                            The primary objective of NRG is to provide a system by which the
+                            daily tide of energy usage can be moderated to reduce dependence on inefficient power
+                            plants. The system aims to do this by anticipating demand and reducing the power used
+                            by devices that are non-essential for the uninterrupted flow of daily life. This would in
+                            turn reduce overall power generation costs and environmental stress.
+                        </p>
                     </div>
                 </div><div class="col-md-4 col-sm-12 col-xs-12">
                     <div class="feature-item">
                         <!--<a href="/estilosaul/2015/december/new-balance-lifestyle-y-g-star-raw-llegan-a-saul.html">-->
                         <a href="/estilosaul/2015/december/new-balance-lifestyle-y-g-star-raw-llegan-a-saul">
                             <img src="images/lightBulb.png" alt="Feature Image"/>
-                            <h4>Lorem ipsum dolor sit amet</h4>
+                            <h4>NRG System</h4>
                         </a>
-                        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+                        <p>The NRG system differs from other smart grid plans by taking a more active role in reducing power usage during peak hours. In other systems, the force behind any change in energy usage is ultimately the end user. This reliance on individual participation means that in order to see a significant result, a large number of people need to change their habits. This is unlikely. NRG avoids this by adjusting consumption rates automatically when needed without any input from the consumer.
+                        </p>
                     </div>
                 </div><div class="col-md-4 col-sm-12 col-xs-12">
                     <div class="feature-item">
                         <!--<a href="/estilosaul/2015/december/nuevo-saul-bistro-en-plaza-madero.html">-->
                         <a href="/estilosaul/2015/december/nuevo-saul-bistro-en-plaza-madero">
                             <img src="images/plug.png" alt="Feature Image"/>
-                            <h4>Lorem ipsum dolor sit amet</h4>
+                            <h4>Energy</h4>
                         </a>
-                        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+                        <p>Catalyze the timely, material, and efficient transformation of the nation’s energy system and secure U.S. leadership in clean energy technologies.</p>
                     </div>
                 </div></div><!--end row-->
         </div><!--end wrapper-->
@@ -138,52 +142,40 @@
                     <div class="col-md-4 col-sm-4 col-xs-12">
                         <div class="footer-col">
                             <div class="list-title" data-toggleable>
-                                <h4>Lorem ipsum dolor sit amet</h4> </div>
+                                <h4>Address</h4> </div>
                             <div class="list-content">
                                 <ul class="footer-list">
                                     <li>
-                                        <a href="/site/es/mundo-saul/campanas.html">Campañas</a>
-                                    </li><li>
-                                        <a href="/site/es/mundo-saul/eventos-saul.html">Eventos</a>
-                                    </li><li>
-                                        <a href="/site/es/mundo-saul/galardones.html">Prensa y galardones</a>
-                                    </li><li>
-                                        <a href="/site/es/mundo-saul/marcas-exclusivas.html">Marcas Exclusivas</a>
-                                    </li><li>
-                                        <a href="/site/es/mundo-saul/ubicaciones.html">Ubicaciones</a>
-                                    </li></ul>
+                                        <h6>5151 State University Dr. Los Angeles, CA 90032</h6>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div><div class="col-md-4 col-sm-4 col-xs-12">
                         <div class="footer-col">
                             <div class="list-title" data-toggleable>
-                                <h4>Lorem ipsum dolor sit amet</h4> </div>
+                                <h4>Contact</h4> </div>
                             <div class="list-content">
                                 <ul class="footer-list">
                                     <li>
-                                        <a href="/site/es/quienes-somos.html">Historia</a>
-                                    </li><li>
-                                        <a href="/site/es/quienes-somos/Valores.html">Valores</a>
-                                    </li><li>
-                                        <a href="/site/es/quienes-somos/proyectos-sociales.html">Proyectos Sociales</a>
-                                    </li><li>
-                                        <a href="/site/es/quienes-somos/manifiesto.html">Manifiesto</a>
-                                    </li><li>
-                                        <a href="/site/es/quienes-somos/faq.html">Preguntas frecuentes</a>
-                                    </li></ul>
+                                        <h6>Phone:213 555 5555</h6>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div><div class="col-md-4 col-sm-4 col-xs-12">
                         <div class="footer-col">
                             <div class="list-title" data-toggleable>
-                                <h4>Lorem ipsum dolor sit amet</h4> </div>
+                                <h4>Team Members: </h4> </div>
                             <div class="list-content">
                                 <ul class="footer-list">
                                     <li>
-                                        <a href="/site/es/contacto/contacto-empleos-y-modelos.html">Empleo, Pasantías, Casting de modelos</a>
-                                    </li><li>
-                                        <a href="/site/es/contacto.html">Contáctanos</a>
-                                    </li></ul>
+                                        <h6> Andres, Abdias</h6>
+                                        <h6> Argumedo, Kevin</h6>
+                                        <h6> Huynh, Kevin</h6>
+                                        <h6> Zuniga, Ignacio</h6>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div></div>
@@ -224,7 +216,7 @@
 <script src="js/homepageJs/transition.js"></script>
 <script src="js/homepageJs/button.js"></script>
 <script src="js/homepageJs/popover.js"></script>
-<<script src="js/homepageJs/carousel.js"></script>
+<script src="js/homepageJs/carousel.js"></script>
 <script src="js/homepageJs/scrollspy.js"></script>
 
 <!-- Added for changes specified in Saul Home Page -->
